# play

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  stracefile.json
asm/: README.md  asm.s  syscall.s
assist/aya/: go.mod  go.sum  main.go  prompt.go  prompt1.txt  prompt2.txt
assist/rawdog/src/rawdog/: __main__.py  llm_client.py  prompts.py
cc/: .gitignore  CMakeLists.txt
cc/cmake/: FindProtobuf-c.cmake  libpg_query.cmake
cc/src/: server.cpp  shell.cpp
cc/src/http/: HTTPHandlerFactory.cpp  HTTPHandlerFactory.h  HTTPHandlerPing.cpp  HTTPHandlerPing.h  HTTPHandlerQuery.cpp  HTTPHandlerQuery.h  Server.cpp  Server.h
cc/src/http/handlers/: Factory.cpp  Factory.h  Ping.cpp  Ping.h
concurrency/: falsesharing_test.go  main.go
etc/: numeric-integration.py
game/: ebiten.go  game.go  game.html  game.py  go.mod  go.sum
leet/: 621_taskshed_test.go
sort/: sort.go  sort_test.go
strace_view/: README.md  event.go  event_test.go  go.mod  main.go  script.js  server.go  strace.html  strace_old.html  strace_view.go  style.css  syscalls.json  template.html  watch.sh
strace_view/letstrace/: main.go
strace_view/syscalls/: epsocket.go  print.go  socket.go  syscall_linux.go  syscall_linux_amd64.go  syscalls.go
strace_view/trace_examples/: trace.692  trace.693  trace.694  trace.695  trace.696  trace.697
stracy/: event.go  go.mod  go.sum  htmlwriter.go  main.go  script.js  server.go  style.css  template.html  watch.sh
stracy/abi/: abi_linux.go  abi_unix.go  flag.go  flag_test.go
stracy/c/: readv.c  writev.c
stracy/syscalls/: epsocket.go  print.go  socket.go  syscall_linux.go  syscall_linux_amd64.go  syscalls.go
tla-plus/: 00_Counter.cfg  00_Counter.tla  scratch.tla  test.cfg  test.tla  ttt.tla
tla-plus/scratch.toolbox/: scratch___scratch.launch  scratch___scratch_SnapShot_1715359663451.launch  scratch___scratch_SnapShot_1715359962318.launch  scratch___scratch_SnapShot_1715360313444.launch  scratch___scratch_SnapShot_1715360317006.launch  scratch___scratch_SnapShot_1715362392814.launch  scratch___scratch_SnapShot_1715362566055.launch  scratch___scratch_SnapShot_1715362938310.launch  scratch___scratch_SnapShot_1715362960424.launch  scratch___scratch_SnapShot_1715363040448.launch  scratch___scratch_SnapShot_1715363113279.launch
tla-plus/scratch.toolbox/scratch_SnapShot_1715359663451/: MC.cfg  MC.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715359962318/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715360313444/: MC.cfg  MC.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715360317006/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715362392814/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715362566055/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715362938310/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715362960424/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715363040448/: MC.cfg  MC.tla  scratch.tla
tla-plus/scratch.toolbox/scratch_SnapShot_1715363113279/: MC.cfg  MC.tla  scratch.tla
tla-plus/ttt.toolbox/: .project  ttt.tla.pmap
tla-plus/wire.toolbox/: .project  wire___Model_1.launch  wire___Model_1_SnapShot_1715289038413.launch
tla-plus/wire.toolbox/Model_1/: MC.tla
tla-plus/wire.toolbox/Model_1_SnapShot_1715289038413/: MC.cfg  Untitled.tla
tr/: go.mod  go.sum  main.go  thoughts.md
tr/alor/: go.mod
tr/cmd/candles/: candles.go
tr/cmd/supercandles/: common.go  supercandles.go  supercurrency.go  superfutures.go  superstocks.go
tr/cmd/test/: test.go
tr/moexalgo/: eq_obstats.go  eq_tradestats.go  fo_obstats.go  fo_tradestats.go  moexalgo.go  obstats.go  orderstats.go  tradestats.go
tr/sql/: tables.sql
tr/store/: _store.go  candles.go  store.go  supereq.go  superfo.go  superfx.go
tree/: binarytree.go  binarytree_test.go
trui/: package-lock.json  package.json
trui2/: package-lock.json  package.json
trui2/src/: App.tsx  app.css
trui2/src/chart/: ChartType.tsx  Indicator.tsx  Overlay.tsx  TickerSelector.tsx  Tooltip.tsx  Update.tsx
trui2/src/data/: index.ts
ucum/: conv.go  conv_test.go  gen.go  normalize.go  normalize_test.go  string.go  ucum.go  ucum_test.go
ucum/internal/data/: atoms.gen.go  conv.gen.go  special.go  types.go
ucum/internal/generate_atoms/: generator.go  main.go
ucum/internal/generate_convertation_table/: generator.go  main.go
ucum/internal/types/: string.go
ucum/internal/ucumparser/: string.go  ucum_test.go  ucumparser.go  ucumparser_test.go  validate.go
ucum/internal/xmlparser/: xmlparser.go
